--- a/jogos.html
+++ b/jogos.html
@@ -376,7 +376,7 @@
                         </a>
                     </div>
                     <div class="icon-wrapper">
-                        <a href="https://www.linkedin.com/in/ana-karla-209606263?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank">
+                        <a href="https://www.linkedin.com/in/anakarla-inojoza/" target="_blank">
                             <i class="bi bi-linkedin"></i>
                         </a>
                     </div>
@@ -394,7 +394,7 @@
             </div>
         </div>
         <div class="copyright">
-            Copyright © 2025 Central Pokémon. All Rights Reserved.
+            Copyright © 2025 Central Pokémon. Todos os direitos reservados.
         </div>
 </footer>
 
